@@ -15,7 +15,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,7 +35,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return productsOnSale.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -45,7 +44,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         Category category = categoryRepository.findByUId(categoryUuid)
                 .orElseThrow(() ->
-                        new BusinessException("Category with UUID: " + categoryUuid + " not found."));
+                        new BusinessException(categoryNotFoundHelper(categoryUuid)));
 
         List<Product> productsOnSale = new ArrayList<>();
         LocalDateTime currentDateTime = LocalDateTime.now();
@@ -54,7 +53,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return productsOnSale.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -64,7 +63,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         Category category = categoryRepository.findByUId(categoryUuid)
                 .orElseThrow(() ->
-                        new BusinessException("Category with UUID: " + categoryUuid + " not found."));
+                        new BusinessException(categoryNotFoundHelper(categoryUuid)));
 
         List<Product> productsOnSale = new ArrayList<>();
         LocalDateTime currentDateTime = LocalDateTime.now();
@@ -81,7 +80,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return limitedProductsOnSale.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -91,7 +90,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         Category category = categoryRepository.findByUId(categoryUuid)
                 .orElseThrow(() ->
-                        new BusinessException("Category with UUID: " + categoryUuid + " not found."));
+                        new BusinessException(categoryNotFoundHelper(categoryUuid)));
 
         List<Product> productsOnSale = new ArrayList<>();
         LocalDateTime currentDateTime = LocalDateTime.now();
@@ -111,7 +110,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return limitedProductsOnSale.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -170,7 +169,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
             LocalDateTime discountPriceEndDate) {
 
         Category category = categoryRepository.findByUId(categoryUuid)
-                .orElseThrow(() -> new BusinessException("Category with UUID: " + categoryUuid + " not found."));
+                .orElseThrow(() -> new BusinessException(categoryNotFoundHelper(categoryUuid)));
 
         List<Product> productsToUpdate = new ArrayList<>();
 
@@ -184,7 +183,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return savedProducts.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -202,7 +201,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return savedProducts.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -210,7 +209,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
             UUID categoryUuid) {
 
         Category category = categoryRepository.findByUId(categoryUuid)
-                .orElseThrow(() -> new BusinessException("Category with UUID: " + categoryUuid + " not found."));
+                .orElseThrow(() -> new BusinessException(categoryNotFoundHelper(categoryUuid)));
 
         List<Product> productsToClear = new ArrayList<>();
         collectProductsToClearInCategory(category, productsToClear);
@@ -224,7 +223,7 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
 
         return savedProducts.stream()
                 .map(productMapper::mapEntityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void addProductsOnSaleFromCategory(
@@ -341,6 +340,10 @@ public class ProductPromotionServiceImpl implements ProductPromotionService {
         for (Category subcategory : subcategories) {
             collectProductsToClearInCategory(subcategory, productsToClear);
         }
+    }
+
+    private String categoryNotFoundHelper(UUID categoryUuid) {
+        return "Category with UUID: " + categoryUuid + " not found.";
     }
 
 }
